adds api module

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "online_poker_app"]
 	path = online_poker_app
 	url = https://github.com/OndrejBelza/online_poker_app.git
+[submodule "online_poker_api"]
+	path = online_poker_api
+	url = https://github.com/OndrejBelza/online_poker_api.git
